@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>modules-ui</artifactId>
+    <artifactId>modules-integration</artifactId>
 
     <parent>
         <groupId>GR2117</groupId>
@@ -111,21 +111,29 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-netty</artifactId>
-            <version>5.11.2</version>
-        </dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.5.6</version>
+			<scope>test</scope>
+		</dependency>
+
+
+
         <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-client-java</artifactId>
-            <version>5.11.2</version>
+            <groupId>GR2117</groupId>
+            <artifactId>modules-ui</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>GR2117</groupId>
+            <artifactId>modules-restserver</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
     <build>
-        <finalName>Xcitr</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -137,24 +145,10 @@
                 <configuration>
                     <argLine>
                     @{jaCoCoArgLine} --add-opens exciter.ui/ui=ALL-UNNAMED
-                    --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                      --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
 </argLine>
                 </configuration>
             </plugin>
-
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-            </plugin>
-
-            <!-- Run the spotbugs code quality tool -->
-            <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-            </plugin>
-
 
             <plugin>
                 <groupId>org.openjfx</groupId>
@@ -164,7 +158,7 @@
                 <!-- Usage: mvn javafx:run -->
                 <configuration>
                     <!-- syntax: module-name/full-app-class-name -->
-                    <mainClass>exciter.ui/ui.AppStarter</mainClass>
+                    <mainClass>exciter.ui/ui.App</mainClass>
                 </configuration>
             </plugin>
 
